Fix NPE if annotation == null (test only).